Remove old table + integration code
