# api/swagger/index.yaml
@@ -273,196 +273,10 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /integrations:
-    x-swagger-router-controller: teamIntegrationController
-    get:
-      description: Get list of all active team integrations
-      operationId: getAllIntegrations
-      deprecated: true
-      tags:
-        - Integration
-      parameters:
-        - name: authorization
-          in: header
-          description: admin authorization
-          required: true
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            type: array
-            items:
-              $ref: "#/definitions/IntegrationObject"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    post:
-      description: Create an integration
-      operationId: addIntegration
-      deprecated: true
-      tags:
-        - Integration
-      parameters:
-        - name: authorization
-          in: header
-          description: admin authorization
-          required: true
-          type: string
-        - name: body
-          in: body
-          required: true
-          description: Integration to add
-          schema:
-            $ref: "#/definitions/IntegrationObject"
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/SuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-  /integrations/{teamId}:
-    x-swagger-router-controller: teamIntegrationController
-    get:
-      description: Get an integration by teamId
-      operationId: getIntegrationById
-      deprecated: true
-      tags:
-        - Integration
-      parameters:
-        - name: authorization
-          in: header
-          description: admin authorization
-          required: true
-          type: string
-        - name: teamId
-          in: path
-          description: Slack teamId
-          required: true
-          type: string
-        - name: decrypt
-          in: query
-          description: decrypt encrypted fields
-          required: false
-          type: boolean
-          default: false
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/IntegrationObject"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    put:
-      description: Update an integration by teamId
-      operationId: updateIntegration
-      deprecated: true
-      tags:
-        - Integration
-      parameters:
-        - name: authorization
-          in: header
-          description: admin authorization
-          required: true
-          type: string
-        - name: teamId
-          in: path
-          description: Slack teamId
-          required: true
-          type: string
-        - name: body
-          in: body
-          required: true
-          description: Integration to add
-          schema:
-            $ref: "#/definitions/IntegrationUpdateObject"
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/SuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    delete:
-      description: Delete an integration by teamId
-      operationId: deleteIntegration
-      deprecated: true
-      tags:
-        - Integration
-      parameters:
-        - name: authorization
-          in: header
-          description: admin authorization
-          required: true
-          type: string
-        - name: teamId
-          in: path
-          description: Slack teamId
-          required: true
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/SuccessResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  IntegrationObject:
-    type: object
-    required:
-      - teamId
-      - teamDomain
-    properties:
-      teamId:
-        type: string
-        description: 9 character string
-      teamDomain:
-        type: string
-      createdAt:
-        type: string
-        format: datetime
-      slackSlashToken:
-        type: [string, "null"]
-        description: encrypted field
-        example: ABC123999
-      slackWebhookUrl:
-        type: [string, "null"]
-        description: encrypted field
-        example: https://api.slack.com/something
-      metadata:
-        type: [string, object, "null"]
-        description: encrypted field
-  IntegrationUpdateObject:
-    type: object
-    properties:
-      teamId:
-        type: string
-        description: 9 character string
-      teamDomain:
-        type: string
-      slackSlashToken:
-        type: [string, "null"]
-        description: encrypted field
-      slackWebhookUrl:
-        type: [string, "null"]
-        description: encrypted field
-      metadata:
-        type: [string, object, "null"]
-        description: encrypted field
   SoupCalendarViewObject:
     type: object
     properties:
